--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,30 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <include
-        android:id="@+id/tabs_list"
-        layout="@layout/tabs_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+<!--    <include-->
+<!--        android:id="@+id/tabs_list"-->
+<!--        layout="@layout/tabs_toolbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="300dp" />-->
 
-    <!--    <androidx.drawerlayout.widget.DrawerLayout-->
-    <!--        android:id="@+id/drawer_layout"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:fitsSystemWindows="true"-->
-    <!--        >-->
-    <!--        <com.google.android.material.navigation.NavigationView-->
-    <!--            android:layout_width="100dp"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:layout_gravity="start"-->
-    <!--            android:fitsSystemWindows="true"-->
-    <!--            tools2:layout_editor_absoluteX="1dp"-->
-    <!--            tools2:layout_editor_absoluteY="1dp"-->
-    <!--            app2:headerLayout="@layout/header"-->
-    <!--            android:background="@color/theme_light_white_bg"-->
-    <!--            android:elevation="10dp"-->
-    <!--            />-->
-    <!--    </androidx.drawerlayout.widget.DrawerLayout>-->
+    <include layout="@layout/content" />
+
     <LinearLayout
         android:id="@+id/layout_of_bottom_nav"
         android:layout_width="match_parent"
