--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="gray_600">#FF757575</color>
     <color name="light_blue_50">#FFE1F5FE</color>
     <color name="light_blue_200">#FF81D4FA</color>
+    <color name="nb_dark_blue">#1363DF</color>
     <color name="light_blue_900">#FF01579B</color>
 </resources>
