--- a/app/src/main/res/layout/field_layout.xml
+++ b/app/src/main/res/layout/field_layout.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:columnCount="3"
+    android:rowCount="3"
+    android:orientation="horizontal"
+    android:id="@+id/grid_layout">
 
 </GridLayout>
